# find-match-ai

./: .gitignore  docker-compose.yml
backend/: main.go
backend-go/: go.mod  go.sum  main.go
backend/config/: backend.go
backend/handlers/: auth_test.go
backend/internal/: ml_client.go
db/postgres/: init.sql
db/redis/: config.conf
ml/: main.py  match_engine.py  requirements.txt
ml-service-python/: pyproject.toml
proto/: match.proto
